<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Simulate.SimulateFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimenOf16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimenOf16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dimenOf16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/dimenOf16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_text_amount_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_amount_application"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/label_value_amount_application"
        android:layout_width="@dimen/dimenOf0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:gravity="center"
        android:hint="@string/text_brl_currency"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="17"
        android:maxLines="1"
        android:textSize="@dimen/dimenOf40sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/label_text_amount_application" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_text_due_date_investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenOf36dp"
        android:text="@string/text_due_date_investment"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/label_value_amount_application" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/label_value_due_date_investment"
        android:layout_width="@dimen/dimenOf0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:gravity="center"
        android:hint="@string/text_hint_due_date_investment"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="@dimen/dimenOf40sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/label_text_due_date_investment" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_text_percent_cdi_investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenOf36dp"
        android:text="@string/text_percent_cdi_investment"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/label_value_due_date_investment" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/label_value_percent_cdi_investment"
        android:layout_width="@dimen/dimenOf0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:gravity="center"
        android:hint="@string/text_hint_percent_cdi_investment"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:textSize="@dimen/dimenOf40sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/label_text_percent_cdi_investment" />

    <Button
        android:id="@+id/button_start_simulation"
        android:layout_width="@dimen/dimenOf0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenOf36dp"
        android:background="@drawable/shape_selector_button"
        android:text="@string/text_button_simulate"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimenOf16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/label_value_percent_cdi_investment" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:visibility="gone"
        android:background="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/dimenOf36dp"
        android:layout_height="@dimen/dimenOf36dp"
        android:layout_marginTop="@dimen/dimenOf16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintTop_toBottomOf="@id/button_start_simulation" />

</androidx.constraintlayout.widget.ConstraintLayout>